Farsi and Chinese languages added

--- a/templates/index.html
+++ b/templates/index.html
@@ -147,6 +147,8 @@
                     <option value="fi">Finnish</option>
                     <option value="ku">Kurdish</option> 
                     <option value="pl">Polish</option>
+                    <option value="zh">Chinese</option>  <!-- Added Chinese -->
+                    <option value="fa">Farsi</option>    <!-- Added Farsi -->
                 </select><br>
                 <input type="submit" value="Translate Text">
             </form>
