several languages added for translation

--- a/templates/index.html
+++ b/templates/index.html
@@ -147,8 +147,15 @@
                     <option value="fi">Finnish</option>
                     <option value="ku">Kurdish</option> 
                     <option value="pl">Polish</option>
-                    <option value="zh">Chinese</option>  <!-- Added Chinese -->
-                    <option value="fa">Farsi</option>    <!-- Added Farsi -->
+                    <option value="zh-Hans">Chinese</option>  <!-- Simplified Chinese -->
+                    <option value="fa">Farsi</option>
+                    <option value="pt-br">Brazilian Portuguese</option> <!-- Added Brazilian Portuguese -->
+                    <option value="fr-ca">Canadian French</option> <!-- Added Canadian French -->
+                    <option value="nl">Dutch</option> <!-- Added Dutch -->
+                    <option value="de">German</option> <!-- Added German -->
+                    <option value="it">Italian</option> <!-- Added Italian -->
+                    <option value="sv">Swedish</option> <!-- Added Swedish -->
+                    <option value="vi">Vietnamese</option> <!-- Added Vietnamese -->
                 </select><br>
                 <input type="submit" value="Translate Text">
             </form>
